# libregmap

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
source/: regmap.c  regmap.h
tests/: CMakeLists.txt  test_api_access.c  test_api_read.c  test_api_update_bits.c  test_api_write.c  test_u16_array.c  test_u8_array.c
